--- a/ExamplePlugin/PenisSeeker.csproj
+++ b/ExamplePlugin/PenisSeeker.csproj
@@ -21,13 +21,13 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 
-		<PackageReference Include="BepInEx.Core" Version="6.0.0-pre.1" />
+		<PackageReference Include="BepInEx.Core" Version=" 5.4.21" />
 
 		<PackageReference Include="R2API" Version="5.0.5" />
 
-		<PackageReference Include="RoR2BepInExPack" Version="1.32.0" />
+		
 
-		<PackageReference Include="UnityEngine.Modules" Version="6000.3.0-alpha.2" IncludeAssets="compile" />
+		<PackageReference Include="UnityEngine.Modules" Version="2021.3.33" IncludeAssets="compile" />
 		<PackageReference Include="RiskOfRain2.GameLibs" Version="1.3.9-r.0" />
 		<PackageReference Include="MMHOOK.RoR2" Version="2025.6.3" NoWarn="NU1701" />
 	</ItemGroup>
