i think ..,..,, therefor i am ,.,,.,,.,.

--- a/PenisSeeker/PenisSeeker.csproj
+++ b/PenisSeeker/PenisSeeker.csproj
@@ -33,6 +33,12 @@
 		<PackageReference Include="MMHOOK.RoR2" Version="2025.12.9" NoWarn="NU1701" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Reference Include="Skills">
+	    <HintPath>..\lib\Skills.dll</HintPath>
+	  </Reference>
+	</ItemGroup>
+
 
 
 </Project>
