--- a/PenisSeeker/PenisSeeker.csproj
+++ b/PenisSeeker/PenisSeeker.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
@@ -8,11 +8,12 @@
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-	  <NoWarn>1701;1702;IDE0051</NoWarn>
+		<DefineConstants>DEBUG;TRACE</DefineConstants>
+	  	<NoWarn>1701;1702;IDE0051</NoWarn>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-	  <NoWarn>1701;1702;IDE0051</NoWarn>
+	  	<NoWarn>1701;1702;IDE0051</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -22,21 +23,26 @@
 		</PackageReference>
 
 		<PackageReference Include="BepInEx.Core" Version=" 5.4.21" />
-
 		<PackageReference Include="R2API" Version="5.0.5" />
-
 		<PackageReference Include="R2API.Core" Version="5.3.0" />
-
+		<PackageReference Include="Rune580.Mods.RiskOfRain2.RiskOfOptions" Version="2.8.3" />
 		
-
-		<PackageReference Include="UnityEngine.Modules" Version="6000.3.0" IncludeAssets="compile" />
+		<PackageReference Include="UnityEngine.Modules" Version="2023.2.22" IncludeAssets="compile" />
 		<PackageReference Include="MMHOOK.RoR2" Version="2025.12.9" NoWarn="NU1701" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <Reference Include="Skills">
 	    <HintPath>..\lib\Skills.dll</HintPath>
+		<Private>false</Private>
+		<CopyLocalSatelliteAssemblies>false</CopyLocalSatelliteAssemblies>
 	  </Reference>
+	  <Reference Include="UnityHotReload">
+	    <HintPath>..\lib\UnityHotReload.dll</HintPath>
+		<Private>false</Private>
+		<CopyLocalSatelliteAssemblies>false</CopyLocalSatelliteAssemblies>
+	  </Reference>
+		
 	</ItemGroup>
 
 
